--- a/chat-agent/pytest.ini
+++ b/chat-agent/pytest.ini
@@ -1,7 +1,7 @@
 # ABOUT-ME: Pytest configuration for the chat-agent workspace.
 # ABOUT-ME: Ensures tests can import modules from the local src/ directory and keeps output tidy.
 
-[tool:pytest]
+[pytest]
 addopts = --tb=short
 
 testpaths = tests
@@ -11,3 +11,6 @@ python_functions = test_*
 
 # Make src importable as top-level package
 pythonpath = src
+
+markers =
+	integration: marks tests as integration (deselect with '-m "not integration"')
